# bigquery-qt

./: .gitignore  CMakeLists.txt  bigquery-qt  configuration.py  form.py  form.ui  main.py  mainwindow.py  requirements.txt
app/: bigqueryclient.cpp  bigqueryclient.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  querytab.cpp  querytab.h  resources.qrc  savedqueriesclient.cpp  savedqueriesclient.h  savedquerytab.cpp  savedquerytab.h  spinnerbutton.cpp  spinnerbutton.h  tablestructuretab.cpp  tablestructuretab.h
bigquery_api/: bigquery_api.py  dataset.py  project.py  table.py
cmake/: ResolveDependency.cmake
main_ui/: busy_indicator.py  mainwindow.py
misc/: config.py  dumpster.py  sysinfo.py
tables/: controller.py  model.py
tables_ui/: controller.py  model.py
